# extraction-benchmark

./: .gitignore  README.md  pyproject.toml
data/: experiment_parameters.yaml  template_fields.csv
data/prompts/: bills.txt  discharge.txt  nuextract_example.txt  nuextract_template.json  nuextract_template_bills.json  one_shot.txt  zero_shot.txt
scripts/: analyze_scores.R  collect_field_scores.R  merge_datasets.R  preprocess_kaggle.py
src/extraction_benchmark/: extraction.py  main.py  nuextract.py  ocr.py  scoring.py
